# langchain-stuff

./: Pipfile  README.md  pyproject.toml
DSPy/: dspy.ipynb
cache/: cache_db_0.9.db.wal
ollama/: 1.ipynb
quickstart/: 1.ipynb  2.ipynb  3.ipynb  anthropic_stuff.ipynb  instructor.ipynb  pandasai.ipynb
